some spacing problems fixed and the height of the images in the gallery updated for mobile

--- a/assets/css/mindset-logo-animation.css
+++ b/assets/css/mindset-logo-animation.css
@@ -184,8 +184,17 @@ svg.active .svg-elem-18 {
   fill: rgb(255, 255, 255);
 }
 
-.mindset-logo-div svg {
-  width: 20rem;
-  margin-bottom: -4rem;
+@media (min-width: 768px) {
+  .mindset-logo-div svg {
+    width: 20rem;
+    margin-bottom: -4rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .mindset-logo-div svg {
+    width: 15rem;
+    margin-bottom: -5rem;
+  }
 }
 
